<resources>
    <string name="app_name">Water App</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="dashboard">Dashboard</string>
    <string name="electricity">Electricity</string>
    <string name="water">Water</string>
    <string name="support">Supports</string>
    <string name="account">Accounts</string>
    <string name="enter_email">Enter Email</string>
    <string name="change_password">Change Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_otp_send_to_your_email">Enter OTP send to your email</string>
    <string name="resend_send_otp">Resend send OTP</string>
    <string name="verify">Verify</string>
    <string name="set_new_password">Set New Password</string>
    <string name="must_be_atleast_8_character">Must be at least 8 character</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="no_worries_we_ll_send_you_reset_instruction">No worries, we\'ll send you reset instruction  No worries, we\'ll send you reset instruction</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_otp">Send Otp</string>
    <string name="notification">Notifications</string>
    <string name="report_details">Report Details</string>
    <string name="generate_report">Generate Report</string>
    <string name="description">Description</string>
    <string name="enter_city">Enter City</string>
    <string name="pin_code">Pin Code</string>
    <string name="upload_image">Upload Image</string>
    <string name="faq">Faq</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_street">Enter Street</string>
    <string name="account_history">Account History</string>
    <string name="announcements">Announcements</string>
    <string name="check_balance">Check Balance</string>
    <string name="logout_app">Logout App</string>
    <string name="old_password">Old Password</string>
    <string name="yuor_service_request_has_been_placed_successfully">your service request has been placed successfully</string>
    <string name="hello_users">Hello Users</string>
    <string name="message">Message :</string>
    <string name="announcement">Announcements</string>
    <string name="electricity_will_cut_from_10_am_to_11_am_today">water</string>
    <string name="can_i_get_a_breakdown_of_my_charges">Can I get a breakdown of my charges? Can I get a breakdown of my charges?</string>
    <string name="yes_a_detailed_breakdown_is_available_on_your_bill_statement_you_can_also_view_it_in_your_account_dashboard_under_billing_details">Yes, a detailed breakdown is available on your bill statement. You can also view it in your account dashboard under \'Billing Details</string>
    <string name="service_request">Service Request</string>
    <string name="home">Home</string>
    <style name="Style_Dialog_Rounded_Corner" parent="Theme.AppCompat.Light.Dialog.Alert">
        <item name="android:windowMinWidthMinor">75%</item>`
    </style>
    <string name="Please_enter_OTP">Please Enter OTP</string>
    <string name="unable_to_connect">Unable to connect to the internet please try again\n</string>
    <string name="server_error">Server Error</string>
    <string name="please_wait">Please Wait…\n</string>
    <string name="OK">OK</string>
    <string name="are_your_sure_you_want_to_delete">are your sure you want to delete</string>
    <string name="enter_mesage">Please enter message</string>
    <string name="balance">Balance</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="top_up">Top Up</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="pending">pending</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="status">Status :</string>
    <string name="_01_02_2025">01/02/2025</string>
    <string name="end_date">End Date :</string>
    <string name="greater_noida_noida_zip_223390">Greater Noida, Noida, zip - 223390</string>
    <string name="start_date">Start Date :</string>
    <string name="_100">100</string>
    <string name="consumed_unit">Consumed Unit :</string>
    <string name="_500">500</string>
    <string name="request_for_address_update">My Request For Address Update</string>
    <string name="debit_card">Debit Card</string>
    <string name="select_payment_model">Select Payment Model</string>
    <string name="credit_card">Credit Card</string>
    <string name="online_payment">Online Payment</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="email">Email</string>
    <string name="my_request_for_support">My Request For Support</string>
    <string name="enter_name">Enter Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="pin">Pin</string>
    <string name="update">Update</string>
    <string name="enter_street_line">Enter Street Line</string>
    <string name="update_address">Update Address</string>
    <string name="address_update">Address Update</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="error_user_name">Please enter a user name</string>
    <string name="error_user_email">Please enter your email</string>
    <string name="error_user_phone">Please enter your phone Number</string>
    <string name="error_user_password">Please enter your password</string>
    <string name="error_user_city">Please enter your city</string>
    <string name="error_user_street">Please enter your street</string>
    <string name="error_user_pin">Please enter your pin</string>
    <string name="error_user_address">Please enter your address</string>
    <string name="error_user_old_password">Please enter old password</string>
    <string name="error_user_new_password">Please enter new password</string>
    <string name="error_user_confirm_password">Please enter confirm password</string>
    <string name="click_to_back">Please click BACK again to exit</string>
    <string name="upendra_pratap_singh">Upendra Pratap Singh</string>
    <string name="nov_13">Nov 13</string>
    <string name="juice">Juice</string>
    <string name="_10">$10</string>
    <string name="add_balance">Add Balance</string>
    <string name="_10000000">₹10000000</string>
    <string name="add">Add</string>
    <string name="a">A....</string>
    <string name="available_balance">Available Balance</string>
    <string name="history">History</string>
    <string name="transactions">Transactions</string>
    <string name="my_reports">My Reports</string>
    <string name="_0">0</string>
    <string name="all_clear">All Clear</string>
    <string name="personal_details">Personal Details</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="_91_000_000_0000">+91-000-000-0000</string>
    <string name="title">Title :</string>
    <string name="_2024">2024</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="service_types">Service Types :</string>
    <string name="total_amount">Total Amount :</string>
    <string name="my_address_update_request">My Address Update Request</string>
    <string name="chat_supports">Chat Supports</string>
    <string name="email_supports">Email Supports</string>
    <string name="phone_supports">Phone Supports</string>
    <string name="request_for_customer_supports">Request For Customer Supports</string>
    <string name="our_services">Our Services</string>
    <string name="current_balances">Current Balances</string>
    <string name="available_balance_of_electricity">Available Balance Of Electricity</string>
    <string name="available_balance_of_water">Available Balance Of Water</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="customer_supports">Customer Supports</string>
    <string name="cashback_from_purchase">Cashback from purchase</string>
    <string name="purchase_from_amazon">Purchase from Amazon</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="_685746354219">685746354219</string>
    <string name="_100_00">$ 100.00</string>
    <string name="confirmed">Confirmed</string>
    <string name="_12_nov_2024">12 Nov 2024</string>
    <string name="_3_36_pm">3:36 PM</string>
    <string name="hello">hello ??</string>
    <string name="hello_what_about_you">hello what about you</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="are_you_sure_to_logout">Are you sure to Logout?</string>
    <string name="name">Name :</string>
    <string name="problem_types">Problem Types :</string>
    <string name="date_of_incident">Date Of Incident :</string>
    <string name="address">Address :</string>
    <string name="view_problem">View Problem</string>
    <string name="emailforaddressupdate">Email :</string>
    <string name="upendra9076_gmail_com">Upendra9076@gmail.com</string>
    <string name="write_something_here">write something here</string>
    <string name="statuss">Status :</string>
    <string name="_9076692189">9076692189</string>
    <string name="service_name">Service Name :</string>
    <string name="fallen_pole">Fallen Pole</string>
    <string name="error_enter_amount">Please enter valid amount</string>
    <string name="error_please_upload_image">Please upload the image</string>
    <string name="updated_profile">Profile updated successfully</string>
    <string name="unexpected_error">An unexpected error occurred</string>
    <string name="image_captured">Image capture cancelled</string>
    <string name="no_camera_app_found">No camera app found</string>
    <string name="failed_load_image">Failed to load image</string>
</resources>