<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintWidth_percent="0.96"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/productListConst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EAECEB"
            android:padding="10dp">

            <TextView
                android:id="@+id/servicesName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/service_types"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/servicesText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Water"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/servicesName"
                app:layout_constraintTop_toTopOf="@+id/servicesName"
                app:layout_constraintWidth_percent="0.8" />

            <TextView
                android:id="@+id/Dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/total_amount"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/servicesName"
                app:layout_constraintTop_toBottomOf="@+id/servicesText" />

            <TextView
                android:id="@+id/servicesPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/_500"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/Dates"
                app:layout_constraintTop_toBottomOf="@+id/servicesText"
                app:layout_constraintWidth_percent="0.68" />

            <TextView
                android:id="@+id/customerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/consumed_unit"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/Dates"
                app:layout_constraintTop_toBottomOf="@+id/servicesPrice" />

            <TextView
                android:id="@+id/servicesNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/_100"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/customerPhone"
                app:layout_constraintTop_toTopOf="@+id/customerPhone" />


            <TextView
                android:id="@+id/servicePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/start_date"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/customerPhone"
                app:layout_constraintTop_toBottomOf="@+id/servicesNo" />

            <TextView
                android:id="@+id/ServPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/greater_noida_noida_zip_223390"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/servicePrice"
                app:layout_constraintTop_toTopOf="@+id/servicePrice" />


            <TextView
                android:id="@+id/customerstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/end_date"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/servicePrice"
                app:layout_constraintTop_toBottomOf="@+id/ServPrice" />

            <TextView
                android:id="@+id/custStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/_01_02_2025"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/customerstatus"
                app:layout_constraintTop_toBottomOf="@+id/servicePrice"
                app:layout_constraintTop_toTopOf="@+id/customerstatus"
                app:layout_constraintWidth_percent="0.59" />

            <TextView
                android:id="@+id/billStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/customerstatus"
                app:layout_constraintTop_toBottomOf="@+id/custStatus" />

            <TextView
                android:id="@+id/billElecStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pending"
                android:textColor="@color/green_cyan"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/billStatus"
                app:layout_constraintTop_toBottomOf="@+id/servicePrice"
                app:layout_constraintTop_toTopOf="@+id/billStatus"
                app:layout_constraintWidth_percent="0.59" />

            <Button
                android:id="@+id/downloadInvoice"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:text="@string/download_invoice"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/billElecStatus" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>