<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintWidth_percent="0.96"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/productListConst"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:background="#EAECEB"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/servicesName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/servicesText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/upendra_pratap_singh"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintStart_toEndOf="@+id/servicesName"
                app:layout_constraintTop_toTopOf="@+id/servicesName" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/emailforaddressupdate"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/servicesName"
                app:layout_constraintTop_toBottomOf="@+id/servicesText" />

            <TextView
                android:id="@+id/emailSupport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/upendra9076_gmail_com"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintWidth_percent="0.68"
                app:layout_constraintStart_toEndOf="@+id/emailText"
                app:layout_constraintTop_toBottomOf="@+id/servicesText" />

            <TextView
                android:id="@+id/phoneNumberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/street"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/emailText"
                app:layout_constraintTop_toBottomOf="@+id/emailSupport" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/_9076692189"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintWidth_percent="0.68"
                app:layout_constraintStart_toEndOf="@+id/phoneNumberText"
                app:layout_constraintTop_toBottomOf="@+id/emailSupport" />


            <TextView
                android:id="@+id/customerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/city"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/phoneNumberText"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

            <TextView
                android:id="@+id/servicesNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_something_here"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/customerPhone"
                app:layout_constraintTop_toTopOf="@+id/customerPhone" />


            <TextView
                android:id="@+id/servicePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/pin"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/customerPhone"
                app:layout_constraintTop_toBottomOf="@+id/servicesNo" />

            <TextView
                android:id="@+id/ServPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/greater_noida_noida_zip_223390"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/servicePrice"
                app:layout_constraintTop_toTopOf="@+id/servicePrice" />

            <TextView
                android:id="@+id/customerstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/statuss"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/servicePrice"
                app:layout_constraintTop_toBottomOf="@+id/ServPrice" />

            <TextView
                android:id="@+id/custStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pending"
                android:textColor="@color/green_cyan"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@+id/customerstatus"
                app:layout_constraintStart_toEndOf="@+id/customerstatus"
                app:layout_constraintTop_toBottomOf="@+id/servicePrice"
                app:layout_constraintWidth_percent="0.59" />

            <Button
                android:id="@+id/viewImageOfProblem"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="View Problem"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/custStatus"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>